Added slide links to the README

--- a/README.Rmd
+++ b/README.Rmd
@@ -15,9 +15,8 @@ knitr::opts_chunk$set(
 
 # Welcome to the soundscapeR Tutorial 
 
-To install and run the tutorial, follow the instructions below: \
+## 1. Installing the tutorial
 \
-
 **To install this tutorial for the [soundscapeR]() R-package, please run:** \
 \
 ```{r, eval=FALSE }
@@ -25,6 +24,9 @@ To install and run the tutorial, follow the instructions below: \
 devtools::install_github(repo = "ThomasLuypaert/soundscapeR.tutorial")
 
 ```
+\
+
+## 2. Running the tutorial
 \
 **Once the package installed, load the package using:** \
 \
@@ -44,3 +46,6 @@ learnr::run_tutorial(name = "soundscapeR_tutorial", package = "soundscapeR.tutor
 
 ```
 
+## 3. The accompanying slides
+\
+If you're interested in the slide deck that accompanies this tutorial, you can find the slides on Part I: Collecting acoustic data using AudioMoth [here](https://docs.google.com/presentation/d/1u42EZRPJVxk1hHQiKCxqK2VJ4bP-ZLObOFvDajZf9zo/edit?usp=sharing), and the slides on Part II: A soundscape approach to analysing big acoustic data [here](https://docs.google.com/presentation/d/13xTOucQI4DPDWQnhJ2pYWqrXHzV0mu6LQm0ERheTXJI/edit?usp=sharing). 
